# stmfabapp

./: .created  README.md  overgrowthmetric.txt  pyproject.toml  requirements.txt  structure.txt
output/: QD_001_fabrication_record_20251030_172103.html  QD_001_fabrication_record_20251104_141750.html  Tube Stop_fabrication_record_20251029_140201.html
scripts/: hook-pySPM.py
stm_fab/: fabrication_steps.py  thermal_budget.py
stm_fab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stm_fab/analysis/: batch_metrics.py  batch_rampdown.py  cooldown_analysis.py  html_report backup.py  html_report.py  init.py  labview_analysis.py  process_metrics backup.py  process_metrics.py  resistance_fit.py  susi_calibration.py
stm_fab/db/: models.py  numpy_fix.py  operations - Copy.py  operations.py  operations_enhanced.py
stm_fab/gui/: app - Copy.py  app backup.py  app.py  bmr_tab - Copy.py  bmr_tab.py  cooldown_comparison_tab.py  cooldown_tab.py  device_management.py  fabrication_steps_tab - Copy.py  fabrication_steps_tab.py  labview_analysis_tab - Copy.py  labview_analysis_tab.py  plan_builder.py  stm_fab_records.db
stm_fab/labview/: bulk_import.py  labview_parser.py  process_summarizer.py
stm_fab/output/: Crouch Hill_fabrication_record.html  Kingsbury2_fabrication_record.html  Kingsbury_fabrication_record_20251104_145444.html  device_report_20251107_164205.html
stm_fab/quality/: quality_checks.py
stm_fab/reports/: bmr_pdf_generator.py  fabrication_record - Copy.py  fabrication_record.py
stm_fab/resources/: Gwyddionnet.pymap  (+1 more)
(+11 files in other folders)
